<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Krishna Prasad Kuchur,
  ~
  ~ This project is meant only for the use and assessment by Professor Timothy Lindquist of Arizona State Univeristy, for the course SER 423.
  ~
  ~ @author Krishna Prasad Kuchur  kkuchur@asu.deu
  ~
  ~ @version January 2017
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="The Zappos Family Story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:textSize="22dp"
        android:id="@+id/textView10" />

    <TextView
        android:text="@string/firstpara"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>

    <TextView
        android:text="@string/secondpara"
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>

    <TextView
        android:text="@string/thirdpara"
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>

    <TextView
        android:text="@string/fourthpara"
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <TextView
        android:text="@string/fifthpara"
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <TextView
        android:text="@string/sixthpara"
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <TextView
        android:text="@string/seventhpara"
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textSize="12dp"/>


</LinearLayout>
  </ScrollView>