<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Krishna Prasad Kuchur,
  ~
  ~ This project is meant only for the use and assessment by Professor Timothy Lindquist of Arizona State Univeristy, for the course SER 423.
  ~
  ~ @author Krishna Prasad Kuchur  kkuchur@asu.deu
  ~
  ~ @version January 2017
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Contact Information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/callcustomerservice"/>
        <TextView
            android:text="@string/support"
            android:layout_width="255dp"
            android:layout_height="138dp"
            android:id="@+id/textView7"
            android:paddingTop="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:layout_row="2"
            android:textColor="@color/bb_darkBackgroundColor"
            android:layout_column="2"
            android:textSize="16dp"
            android:textStyle="italic"/>

        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_column="1"
            android:layout_row="4"
            android:background="@drawable/supportemail"
            android:layout_width="80dp"
            android:layout_height="105dp" />
        <TextView
            android:text="@string/emailsupport"
            android:layout_width="255dp"
            android:layout_height="213dp"
            android:id="@+id/textView8"
            android:paddingTop="55dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:layout_row="4"
            android:textColor="@color/bb_darkBackgroundColor"
            android:layout_column="2"
            android:textSize="16dp" />

        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_column="1"
            android:layout_row="5"
            android:background="@drawable/chat"
            android:layout_width="80dp"
            android:layout_height="105dp" />
        <TextView
            android:text="@string/chatsupport"
            android:layout_width="255dp"
            android:layout_height="213dp"
            android:id="@+id/textView9"
            android:paddingTop="55dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="25dp"
            android:layout_row="5"
            android:textColor="@color/bb_darkBackgroundColor"
            android:layout_column="2"
            android:textSize="16dp" />

    </GridLayout>


</LinearLayout>